First build on entity, exception, constant

--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
             "Manhhuyvo\\Number\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "php": ">= 8.0"
+    }
 }
